Vijay - 2016/07/26 - Few Changes to 1.x restful webservice example

--- a/restfulapp1/src/main/webapp/WEB-INF/web.xml
+++ b/restfulapp1/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   		<param-name>jersey.config.server.provider.packages</param-name>
   		<param-value>org.pjaygroup.restfulapp1.controller</param-value>
   	</init-param>
-  	<!-- With version 1.9.2 there is no need for "POJOMappingFeature" this is removed from jar. This works automatically - only required till 1.9.1 version 
+  	<!-- With version 1.9.1 there is no need for "POJOMappingFeature" this is removed from jar. This works automatically - 
   			"https://jersey.java.net/nonav/documentation/1.9.1/user-guide.html" or "https://jersey.java.net/nonav/documentation/1.9.1/user-guide.html#d4e903" -->
 <!--   	<init-param> -->
 <!--   		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name> -->
